Added RoboCoder Scores

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 h3, h4 {
-	font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
 
 p, a {
-	font-family: "Lucida Bright", Georgia, serif;
+	font-family: "Open Sans", sans-serif;
 }
 
 img {
