--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 h3, h4 {
-	font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	font-family: "Open Sans", sans-serif;
 }
 
 p, a {
-	font-family: "Lucida Bright", Georgia, serif;
+	font-family: "Open Sans", sans-serif;
 }
+
 
 img {
 	margin: 20px auto 20px auto;
